# mebuki

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  blue_ticker.spec  mebuki.spec  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/rules/: date-conversion.md  mcp-cli-parity.md  versioning.md  xbrl-analysis.md
.github/workflows/: ci.yml  release.yml
Formula/: blue-ticker.rb  mebuki.rb
assets/: data_j.csv  icon.icns  icon_dark.icns
backend/: __init__.py  main.py  prompts.py  settings.py
backend/routers/: __init__.py  analysis.py  companies.py  mcp.py
backend/services/: analyzer.py  data_service.py  macro_analyzer.py  macro_series_mapping.py  (+1 more)
blue_ticker/: __init__.py  __main__.py
docs/: architecture-review.md  architecture-status.md  remote-mcp-cache-roadmap.md  roadmap.md  todo.md  xbrl-parsing.md
mebuki/: __init__.py  __main__.py  cli.py  mcp_server.py  prompts.py
pkg-resources/: entitlements.mac.plist
scripts/: build_backend.sh  compare_bs_ibd.py  generate_icons.sh  prepare_smoke_cache.py  proto_ifrs_bs.py  smoke_bs.py  start.sh
tests/: test_analyzer_apply_functions.py  test_analyzer_async.py  test_backend_compatibility.py  test_boj_macro.py  test_cache_pruner.py  test_calculator_update.py  test_cli_analyze_years.py  test_cli_contract.py  test_cli_integration.py  test_data_service.py  test_dependency_rules.py  test_dup_deduplication.py  test_edinet_cache_store.py  test_edinet_client.py  test_edinet_discovery.py  test_edinet_docs_cache_upgrade.py  test_edinet_fetcher_boundary.py  test_edinet_only_cached_smoke.py  test_edinet_smoke_cache.py  test_half_year_record_count.py  test_jquants_utils_fix.py  test_mcp_contract.py  test_operating_profit_change.py  test_output_serializer.py  test_portfolio_service.py  test_settings_path.py  test_user_paths.py  test_xbrl_accounting_standard_priority.py  test_xbrl_balance_sheet.py  test_xbrl_depreciation.py  test_xbrl_fact_metadata.py  test_xbrl_gross_profit.py  test_xbrl_interest_bearing_debt.py  test_xbrl_interest_expense.py  test_xbrl_nonconsolidated_fallback.py  test_xbrl_operating_profit.py  test_xbrl_order_book.py  test_xbrl_refactor_unit.py  test_xbrl_shareholder_metrics.py  test_xbrl_statement_sections.py  (+2 more)
(+174 files in other folders)
