[project]
name = "mebuki"
version = "2.3.17"
description = "mebuki: 投資回避に特化した投資分析ツール"
authors = [
    {name = "shu", email = "shu.sorahiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiohttp (>=3.9.0,<4.0.0)", "keyring (>=25.7.0,<26.0.0)", "beautifulsoup4 (>=4.14.3,<5.0.0)", "mcp (>=1.2.1)", "questionary (>=2.1.0,<3.0.0)", "PyYAML (>=6.0.2)"]

[project.scripts]
mebuki = "mebuki.app.cli:main"

[tool.poetry]
packages = [
    {include = "mebuki", from = "."}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
]
