[project]
name = "blue-ticker"
version = "26.5.6"
description = "BLUE TICKER: 正確な情報収集に特化した日本株分析CLI/MCPツール"
authors = [
    {name = "sollahiro", email = "sollahiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiohttp (>=3.9.0,<4.0.0)", "beautifulsoup4 (>=4.14.3,<5.0.0)", "mcp (>=1.2.1)"]

[project.scripts]
ticker = "blue_ticker.app.cli:main"
blt = "blue_ticker.app.cli:main"

[tool.poetry]
packages = [
    {include = "blue_ticker", from = "."}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "pyright (>=1.1.409,<2.0.0)",
]
